--- a/imprint.html
+++ b/imprint.html
@@ -10,18 +10,18 @@
 ">
   <meta name="author" content="Cala y sus compas">
 
-  <link rel="alternate" type="application/atom+xml" href="https://irazugrower.github.io/general_feed.xml" title="General Site Atom Feed (No Podcast Metadata!)" />
-  <link rel="alternate" type="application/rss+xml" title="mp3 Episode RSS-Feed" href="https://irazugrower.github.io/episodes.mp3.rss" />
+  <link rel="alternate" type="application/atom+xml" href="https://irazu.cartuanis.com/general_feed.xml" title="General Site Atom Feed (No Podcast Metadata!)" />
+  <link rel="alternate" type="application/rss+xml" title="mp3 Episode RSS-Feed" href="https://irazu.cartuanis.com/episodes.mp3.rss" />
 
   <link href='/assets/css/ubuntu.css' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="https://irazugrower.github.io/assets/css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://irazu.cartuanis.com/assets/css/main.css">
 
-  <script type='text/javascript' src="https://irazugrower.github.io/assets/js/jquery.min.js"></script>
-  <script type='text/javascript' src="https://irazugrower.github.io/assets/js/bootstrap.min.js"></script>
-  <script type='text/javascript' src="https://irazugrower.github.io/assets/js/icheck.min.js"></script>
-  <script type='text/javascript' src="https://irazugrower.github.io/assets/js/jquery.fs.selecter.min.js"></script>
-  <script type='text/javascript' src="https://irazugrower.github.io/assets/js/jquery.fs.stepper.min.js"></script>
-  <script type='text/javascript' src="https://irazugrower.github.io/assets/js/custom.js"></script>
+  <script type='text/javascript' src="https://irazu.cartuanis.com/assets/js/jquery.min.js"></script>
+  <script type='text/javascript' src="https://irazu.cartuanis.com/assets/js/bootstrap.min.js"></script>
+  <script type='text/javascript' src="https://irazu.cartuanis.com/assets/js/icheck.min.js"></script>
+  <script type='text/javascript' src="https://irazu.cartuanis.com/assets/js/jquery.fs.selecter.min.js"></script>
+  <script type='text/javascript' src="https://irazu.cartuanis.com/assets/js/jquery.fs.stepper.min.js"></script>
+  <script type='text/javascript' src="https://irazu.cartuanis.com/assets/js/custom.js"></script>
 
   
   
@@ -38,17 +38,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://irazugrower.github.io">Irazu Growers</a>
+          <a class="navbar-brand" href="https://irazu.cartuanis.com">Irazu Growers</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a  href="https://irazugrower.github.io/">Episodes</a></li>
-<li class="active"><a  class="active" href="https://irazugrower.github.io/imprint.html">Imprint</a></li>
+            <li><a  href="https://irazu.cartuanis.com/">Episodes</a></li>
+<li class="active"><a  class="active" href="https://irazu.cartuanis.com/imprint.html">Imprint</a></li>
           </ul>
           <form class="navbar-form navbar-right" action="https://google.com/search" method="get" role="search">
             <div class="form-group">
               <input type="text" name="q" class="form-control" placeholder="search item" value="">
-              <input type="hidden" name="q" value="site:irazugrower.github.io" />
+              <input type="hidden" name="q" value="site:irazu.cartuanis.com" />
             </div>
             <button type="submit" class="btn btn-default">Search</button>
           </form>
@@ -85,7 +85,7 @@
 </div>
 
 <p class="text-center">
-  <img width="200px" src="https://irazugrower.github.io/img/logo-360x360.png" alt="Irazu Growers logo">
+  <img width="200px" src="https://irazu.cartuanis.com/img/logo-360x360.png" alt="Irazu Growers logo">
 </p>
 
 <p>Cala y sus compas te cuenta todo lo que debe saber acerca del autocultivo en Costa Rica.</p>
@@ -104,13 +104,13 @@
       "title": "Irazu Growers",
       "subtitle": "Autocultivo  CR",
       "description": "Cala y sus compas te cuenta todo lo que debe saber acerca del autocultivo en Costa Rica.",
-      "cover": "https://irazugrower.github.io/img/logo-360x360.png",
+      "cover": "https://irazu.cartuanis.com/img/logo-360x360.png",
       "feeds": [
       
         {
           "type": "audio",
           "format": "mp3",
-          "url": "https://irazugrower.github.io/episodes.mp3.rss",
+          "url": "https://irazu.cartuanis.com/episodes.mp3.rss",
           "directory-url-itunes": "http://itunes.apple.com/de/podcast/titel/id123456789",
           "variant": "high"
         },
@@ -126,7 +126,7 @@
 
 <ol type="i">
   
-    <li><a href="https://irazugrower.github.io/episodes.mp3.rss"><i class="fa fa-rss"></i> mp3-RSS-Feed</a></li>
+    <li><a href="https://irazu.cartuanis.com/episodes.mp3.rss"><i class="fa fa-rss"></i> mp3-RSS-Feed</a></li>
   
 </ol>
 
@@ -134,7 +134,7 @@
 
 <ol type="i">
   
-    <li><a href="https://irazugrower.github.io/feed.mp3.json"><i class="fa fa-rss-square"></i> mp3-JSON-Feed</a></li>
+    <li><a href="https://irazu.cartuanis.com/feed.mp3.json"><i class="fa fa-rss-square"></i> mp3-JSON-Feed</a></li>
   
 </ol>
 
