--- a/imprint.html
+++ b/imprint.html
@@ -3,12 +3,12 @@
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Irazu Growers - Imprint</title>
+  <title>Algo más que Mota - Imprint</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Cala y sus compas te cuenta todo lo que debe saber acerca del autocultivo en Costa Rica.
+  <meta name="description" content="Cala y sus compas te cuento todo acerca del Cannabis en Costa Rica y el mundo .
 ">
-  <meta name="author" content="Cala y sus compas">
+  <meta name="author" content="Irazu Growers">
 
   <link rel="alternate" type="application/atom+xml" href="https://irazu.cartuanis.com/general_feed.xml" title="General Site Atom Feed (No Podcast Metadata!)" />
   <link rel="alternate" type="application/rss+xml" title="mp3 Episode RSS-Feed" href="https://irazu.cartuanis.com/episodes.mp3.rss" />
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://irazu.cartuanis.com">Irazu Growers</a>
+          <a class="navbar-brand" href="https://irazu.cartuanis.com">Algo más que Mota</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -79,16 +79,16 @@
           <div class="well">
             <div class="page-header">
   <h3>
-    Irazu Growers
-    <br/><small>Autocultivo  CR</small>
+    Algo más que Mota
+    
   </h3>
 </div>
 
 <p class="text-center">
-  <img width="200px" src="https://irazu.cartuanis.com/img/logo-360x360.png" alt="Irazu Growers logo">
+  <img width="200px" src="https://irazu.cartuanis.com/img/logo-360x360.png" alt="Algo más que Mota logo">
 </p>
 
-<p>Cala y sus compas te cuenta todo lo que debe saber acerca del autocultivo en Costa Rica.</p>
+<p>Cala y sus compas te cuento todo acerca del Cannabis en Costa Rica y el mundo .</p>
 
   <script class="podlove-subscribe-button"
           src="/subscribe-button/javascripts/app.js"
@@ -101,9 +101,9 @@
 
   <script>
     window.podcastData = {
-      "title": "Irazu Growers",
-      "subtitle": "Autocultivo  CR",
-      "description": "Cala y sus compas te cuenta todo lo que debe saber acerca del autocultivo en Costa Rica.",
+      "title": "Algo más que Mota",
+      "subtitle": "",
+      "description": "Cala y sus compas te cuento todo acerca del Cannabis en Costa Rica y el mundo .",
       "cover": "https://irazu.cartuanis.com/img/logo-360x360.png",
       "feeds": [
       
