--- a/imprint.html
+++ b/imprint.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Irazu Growers">
 
   <link rel="alternate" type="application/atom+xml" href="https://irazu.cartuanis.com/general_feed.xml" title="General Site Atom Feed (No Podcast Metadata!)" />
-  <link rel="alternate" type="application/rss+xml" title="mp3 Episode RSS-Feed" href="https://irazu.cartuanis.com/episodes.mp3.rss" />
+  <link rel="alternate" type="application/rss+xml" title="mp3 Episode RSS-Feed" href="https://irazu.cartuanis.com/episodes0.mp3.rss" />
 
   <link href='/assets/css/ubuntu.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="https://irazu.cartuanis.com/assets/css/main.css">
@@ -42,7 +42,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a  href="https://irazu.cartuanis.com/">Episodes</a></li>
+            <li><a  href="https://irazu.cartuanis.com/">episodes0</a></li>
 <li class="active"><a  class="active" href="https://irazu.cartuanis.com/imprint.html">Imprint</a></li>
           </ul>
           <form class="navbar-form navbar-right" action="https://google.com/search" method="get" role="search">
@@ -110,7 +110,7 @@
         {
           "type": "audio",
           "format": "mp3",
-          "url": "https://irazu.cartuanis.com/episodes.mp3.rss",
+          "url": "https://irazu.cartuanis.com/episodes0.mp3.rss",
           "directory-url-itunes": "http://itunes.apple.com/de/podcast/titel/id123456789",
           "variant": "high"
         },
@@ -126,7 +126,7 @@
 
 <ol type="i">
   
-    <li><a href="https://irazu.cartuanis.com/episodes.mp3.rss"><i class="fa fa-rss"></i> mp3-RSS-Feed</a></li>
+    <li><a href="https://irazu.cartuanis.com/episodes0.mp3.rss"><i class="fa fa-rss"></i> mp3-RSS-Feed</a></li>
   
 </ol>
 
