--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Algo más que Mota - Episodes</title>
+  <title>Algo más que Mota - episodes0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="description" content="Cala y sus compas te cuentan todo acerca del Cannabis en Costa Rica y el mundo.
@@ -11,7 +11,7 @@
   <meta name="author" content="Irazu Growers">
 
   <link rel="alternate" type="application/atom+xml" href="https://irazu.cartuanis.com/general_feed.xml" title="General Site Atom Feed (No Podcast Metadata!)" />
-  <link rel="alternate" type="application/rss+xml" title="mp3 Episode RSS-Feed" href="https://irazu.cartuanis.com/episodes.mp3.rss" />
+  <link rel="alternate" type="application/rss+xml" title="mp3 Episode RSS-Feed" href="https://irazu.cartuanis.com/episodes0.mp3.rss" />
 
   <link href='/assets/css/ubuntu.css' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="https://irazu.cartuanis.com/assets/css/main.css">
@@ -42,7 +42,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a  class="active" href="https://irazu.cartuanis.com/">Episodes</a></li>
+            <li class="active"><a  class="active" href="https://irazu.cartuanis.com/">episodes0</a></li>
 <li><a  href="https://irazu.cartuanis.com/imprint.html">Imprint</a></li>
           </ul>
           <form class="navbar-form navbar-right" action="https://google.com/search" method="get" role="search">
@@ -165,7 +165,7 @@ Buenas Vibras</p>
         {
           "type": "audio",
           "format": "mp3",
-          "url": "https://irazu.cartuanis.com/episodes.mp3.rss",
+          "url": "https://irazu.cartuanis.com/episodes0.mp3.rss",
           "directory-url-itunes": "http://itunes.apple.com/de/podcast/titel/id123456789",
           "variant": "high"
         },
@@ -181,7 +181,7 @@ Buenas Vibras</p>
 
 <ol type="i">
   
-    <li><a href="https://irazu.cartuanis.com/episodes.mp3.rss"><i class="fa fa-rss"></i> mp3-RSS-Feed</a></li>
+    <li><a href="https://irazu.cartuanis.com/episodes0.mp3.rss"><i class="fa fa-rss"></i> mp3-RSS-Feed</a></li>
   
 </ol>
 
